Fix alignment of badges titles and return background to them (gosh I commented them out so long ago what)

--- a/sass/badges/style.scss
+++ b/sass/badges/style.scss
@@ -14,9 +14,9 @@
 
 	.title {
 		position: absolute;
-		inset-block-start: -1rem;
+		inset-block-start: -0.625rem;
 		inset-inline-start: 0.75rem;
-		// background-color: var(--bg-color);
+		background-color: var(--bg-color);
 		padding: 0.25rem;
 		color: var(--fg-muted-2);
 		font-weight: var(--font-weight-normal);
@@ -28,7 +28,7 @@
 		transform: scaleX(-1);
 		inset-block-end: -0.75rem;
 		inset-inline-end: 0.75rem;
-		// background-color: var(--bg-color);
+		background-color: var(--bg-color);
 		padding: 0.25rem;
 		color: var(--fg-muted-1);
 	}
@@ -44,7 +44,9 @@
 
 	img {
 		position: relative;
-		transition: all var(--transition), transform var(--transition-bezier);
+		transition:
+			all var(--transition),
+			transform var(--transition-bezier);
 		margin: 0;
 
 		&:hover {
